Two Factor Authentication + Updated openapi config
