# src/auth/dto/validate-otp.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class ValidateOtpDTO {
+  @IsString()
+  @IsNotEmpty()
+  otp: string;
+}
